styles/posts.less
@light: #c7c7c7;
@darkgreen: 004a1e;
@green: #5CBD00;
@dark: #555;
@ghostwhite: ghostWhite;
@lightblue: #E2E4FF;

.handwriting { 
	font-family: 'Reenie Beanie', cursive; 
	font-size: 2em;
}

.clickable {
	cursor:pointer;
}

.rounded {
	border-radius: 10px;
	-moz-border-radius: 10px;
}

div.post {
	clear: both;
	margin: 10px 10px 10px 10px;
	overflow: hidden;
	border: 1px solid @light;
	background: @ghostwhite;
}

div.post-author {
	float: left;
	text-align: center;
	margin-right: 15px;
	padding: 15px;
	font-weight: bold;
	.clickable;
}

div.post-body {
	float: left;
	text-align: left;
	padding-top: 10px;
	padding-bottom: 10px;
	padding-right: 5px;
	width: 340px;
}

p.quote {
	background: #fff;
	text-align: center;
	padding: 5px 7px 5px 7px;
	.rounded;
	.handwriting;
	border: 1px solid @light;
}

.post-body p {
	padding: 5px 0px 5px 0px;
	margin-bottom: 5px;
}

ul.tags {
	display:inline;
	padding-left: 4px;
	margin-bottom: -10px;
}

ul.tags li {
	background: #fff;
	.rounded;
}

div.feeds-container {
	overflow: hidden;
	height: auto;
	border: 1px solid @light;
	border-top: 0px solid;
	margin-bottom: 30px;
	min-width: 400px;
}

ul.feeds {
	border-top: thin solid @light;
	overflow: hidden;
	margin: 0px 0px 3px 0px;
	padding: 7px 2px 0px 3px;
	background: @green;
	text-align:left;
}

ul.feeds li {
	background: #ddd;
	border: thin solid @light;
}

ul.feeds li.tab_active {
	background: #fff;
}

div.stream {
	display:none;
}

.regular_table {
	border: thin solid @light;
	padding: 10px 10px 10px 10px;
}

textarea {
	width: 70%;
	height: 2em;
}

textarea.small {
	height: 1.3em;
}

.joinExpander {
	text-decoration: underline;
}

